--- a/style.css
+++ b/style.css
@@ -1,17 +1,16 @@
 body {
     font-family: Verdana;
-    /* font-size: 1.125rem; */
     margin: 0;
     padding: 0;
     letter-spacing: 0.075rem;
-    animation: fade-in 0.8s ease-in-out forwards;
+    animation: fade-in 0.325s ease-in-out forwards;
     background-color: rgba(23,24,24,255);
     color: rgba(254, 253, 255, 255)
 }
 
 .swal2-html-container, .swal2-title{
     color: white !important;
-  }
+}
 
 a {
 
@@ -39,11 +38,6 @@ h2 {
     margin: 0 auto;
     padding-top: 100px;
     padding: 20;
-}
-
-h1 {
-    font-size: 36px;
-    margin-top: 0;
 }
 
 h3 {
@@ -93,12 +87,12 @@ img {
     border-radius: 50%;
     object-fit: cover;
     margin-right: 20px;
-    border: 1px solid black;
+    border: 1px solid #ffe5e5;
 }
 
 .profile h1 {
     margin: 0;
-    font-size: 24px;
+    font-size: 26px;
     font-weight: bold;
 }
 
@@ -244,25 +238,18 @@ footer {
 
 }
 
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px;
-}
+@media (orientation: landscape) {
+    .profile h1 {
 
-.photo {
-    width: 128px;
-    height: 128px;
-    overflow: hidden;
-}
+        animation: fade-left 0.25s ease-in-out forwards;
 
-.photo img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-    border-radius: 2px;
+    }
+
+    footer {
+
+        animation: fade-bottom 0.25s ease-in-out forwards;
+    
+    }
 }
 
 @keyframes fade-in {
@@ -270,12 +257,36 @@ footer {
         opacity: 0;
     }
 
-    50% {
-        opacity: 0.8;
+    25% {
+
+        opacity: 0.5%;
+
+    }
+
+    75% {
+        opacity: 0.9;
     }
 
     100% {
         opacity: 1;
+    }
+}
+@keyframes fade-left {
+    0% {
+        margin-left: -15px;
+    }
+
+    100% {
+        margin-left: 0px;
+    }
+}
+@keyframes fade-bottom {
+    0% {
+        margin-top: -10px;
+    }
+
+    100% {
+        margin-bottom: 0px;
     }
 }
 
