--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -2,15 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: black !important;
+    color: black;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 }
 
 body {
     font-family: Verdana, sans-serif;
-    display: flex;
-    flex-direction: column;
+    display: block;
     min-height: 100vh;
     width: 100%;
     margin: 0;
@@ -19,30 +18,68 @@ body {
 a {
 
     text-decoration: none;
+    font-style: italic;
+    color: #8e51a0;
+
 
 }
 
 .container {
-    display: flex;
-    flex-direction: row;
     width: 100%;
-    height: 100vh;
     background: #fff;
-    /* overflow: hidden; */
     margin: auto;
-    padding: 0 5%;
+    padding: 0 10%;
 }
 
 .portfolio h2, .portfolio h3, .portfolio p {
     text-align: center;
 }
 
-.sidebar {
-    width: 30%;
+.topbar {
     /* background-color: #2c3e50; */
     color: #ecf0f1;
     padding: 20px;
     text-align: center;
+}
+
+.topbar img {
+
+    width: 256px;
+    border: 2px solid black;
+    box-shadow: 1px 1px 1px 1px  black;
+
+}
+
+.topbar .socials {
+
+    padding-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    width: fit-content;
+    margin: auto;
+    text-align: center;
+
+}
+
+.topbar .socials p {
+
+    margin: auto;
+    text-align: center;
+    padding: 10px;
+
+}
+
+.topbar .socials p:hover {
+
+    font-weight: 600;
+
+}
+
+hr {
+
+    margin-top: 20px;
+    margin-bottom: 20px;
+
 }
 
 .header-image {
@@ -87,26 +124,43 @@ li, .experience li {
 
 li {
 
-    display: flex;
+    /* display: flex; */
     width: 100%;
 
 }
-.experience li span{
+li div {
+
+    display: flex;
+
+}
+li div div {
+
+    display: block;
+
+}
+.experience li .right{
     margin-left: auto;
     text-align: right;
 
 }
+.experience li .desc {
+
+    font-size: 0.75em;
+    text-align: justify;
+    text-justify: inter-word;
+    /* width: 100%; */
+
+}
 
 .portfolio {
-    width: 70%;
-    padding: 20px;
+    margin-top: 25px;
+    display: block;
 }
 
 .portfolio h2 {
     font-size: 28px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
-
 
 .portfolio-section {
     margin-bottom: 50px;
@@ -123,35 +177,48 @@ li {
     color: #333;
 }
 
+.portfolio-section li .desc {
+
+    /* font-size: 0.9em; */
+    margin-top: 10px;
+
+}
+.portfolio-section li {
+
+    padding-bottom: 20px;
+    
+    padding-right: 10px;
+
+}
+.portfolio-section li p, .portfolio-section li h4 {
+
+    font-size: 1.0625em;
+    text-align: left;
+    text-align: justify;
+    text-justify: inter-word;
+
+}
+
 @media (min-width: 768px) {
 
     .gallery {
         display: flex;
         flex-wrap: wrap;
+        width: 100%;
     }
 
     .gallery div {
-        height: 25vh;
-        flex-grow: 1;
-    }
-
-
-    .gallery div {
-
-        padding: 5px;
-
-    }
-    .video .gallery div {
-
-        padding: 15px;
-        margin-bottom: 30px;
+        
+        width: calc(256px + 20px);
+        margin: auto;
+        padding: 20px;
 
     }
 
     .gallery div img {
 
-        max-height: 100%;
-        min-width: 100%;
+        /* padding: 10px; */
+        width: 100%;
         object-fit: cover;
         vertical-align: bottom;
         
@@ -161,15 +228,19 @@ li {
 
 .gallery div img {
 
-    border-radius: 5px;
+    border-radius: 10px;
+    border: 2px solid black;
+    box-shadow: 1px 1px 1px 1px  black;
 
 }
 
 .gallery p {
+    
+    font-weight: 600;
     margin: 0px;
     padding-top: 5px;
     text-align: center;
-    font-size: 0.75em;
+    font-size: 1em;
 
 }
 
@@ -192,26 +263,29 @@ li {
     
     .gallery {
         display: block;
-        /* width: 100%; */
+        width: 100%;
+
     }
     
     .gallery div {
-        /* background-color: #333; */
+
         padding: 10px;
+        width: 100%;
+
     }
     
     .gallery div img {
-    
-        max-height: 50vh;
-        width: 100%;
+
         object-fit: cover;
         vertical-align: bottom;
+        width: 100%;
         
     }
 
     .container {
-        flex-direction: column;
+
         height: auto;
+
     }
 
     .sidebar {
