--- a/style.css
+++ b/style.css
@@ -94,8 +94,8 @@ img {
     border-radius: 50%;
     object-fit: cover;
     margin-right: 20px;
-    border: 2px solid #ffe5e5;
-    box-shadow: 0px 0px 2px 2px #e15d5d;
+    border: 3px solid #eadcd5;
+    /* box-shadow: 0px 0px 2px 2px #e15d5d; */
 }
 
 .profile h1 {
@@ -119,7 +119,7 @@ img {
     text-align: center;
     color: white;
     font-weight: 600;
-    background-color: #e15d5d;
+    background-color: #414bd8;
     border-radius: 8px;
     margin: 10px;
     padding: 12px;
@@ -141,7 +141,7 @@ img {
 .nsfw-button {
 
     /* background-color: #5e2032; */
-    background-color: #b34545;
+    background-color: #272fa3;
 
 }
 
