--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -13,12 +13,13 @@ body {
     min-height: 100vh;
     width: 100%;
     margin: 0;
+    background-color: white;
 }
 
 a {
 
     text-decoration: none;
-    font-style: italic;
+    /* font-style: italic; */
     color: #8e51a0;
 
 
@@ -82,6 +83,11 @@ hr {
 
 }
 
+footer {
+
+
+}
+
 .header-image {
     width: 100%;
     height: auto;
@@ -98,28 +104,6 @@ hr {
     /* font-size: 18px; */
     margin-bottom: 20px;
     /* color: #bdc3c7; */
-}
-
-.experience {
-    padding-bottom: 20px;
-    padding-top: 20px;
-    text-align: left;
-}
-
-.experience h3 {
-    margin-bottom: 10px;
-    border-bottom: 2px solid #ecf0f1;
-    padding-bottom: 5px;
-}
-
-ul, .experience ul {
-    list-style: none;
-    padding: 0;
-    
-}
-
-li, .experience li {
-    margin: 15px 0;
 }
 
 li {
@@ -163,7 +147,7 @@ li div div {
 }
 
 .portfolio-section {
-    margin-bottom: 50px;
+    margin-bottom: 25px;
 }
 
 .portfolio-section h3 {
@@ -174,12 +158,10 @@ li div div {
 .portfolio-section p {
     font-size: 16px;
     margin-bottom: 10px;
-    color: #333;
 }
 
 .portfolio-section li .desc {
 
-    /* font-size: 0.9em; */
     margin-top: 10px;
 
 }
@@ -204,13 +186,15 @@ li div div {
     .gallery {
         display: flex;
         flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
         width: 100%;
     }
 
     .gallery div {
         
         width: calc(256px + 20px);
-        margin: auto;
+        /* margin: auto; */
         padding: 20px;
 
     }
